# share-board

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  857a6c7ca703_add_3x_ui_integration_fields_and_.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  subscriptions.py  usage.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: models.py  session.py
backend/app/integrations/: __init__.py  xray_client.py  xray_pb2.py  xray_pb2_grpc.py  xui_client.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/services/: __init__.py  aggregation_service.py  billing_service.py  collector_service.py  subscription_service.py
backend/app/workers/: __init__.py  poller.py
backend/scripts/: check_xray_grpc.py  init_db.py  manage_users.py  setup.sh
docs/: XRAY_GRPC_SETUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  MainLayout.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/features/billing/components/: CostSharingCard.tsx  TransactionLedger.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/pages/: BillingPage.tsx  DashboardPage.tsx  LoginPage.tsx
frontend/src/store/: useAuthStore.ts  useTrafficStore.ts
scripts/: install_3x-ui.sh  install_xray.sh  install_xray_v2.sh  manage_xray_users.sh  start.sh
(+6 files in other folders)
